--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -41,6 +41,7 @@ jobs:
       - name: Write coverage report
         run: deno coverage ./coverage --lcov > ./coverage/coverage.lcov
 
-      - uses: codecov/codecov-action@v2
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v2
         with:
           files: ./coverage/coverage.lcov
