--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -18,12 +18,12 @@ jobs:
       - name: Setup Deno
         uses: denoland/setup-deno@v1
         with:
-          deno-version: "~1.18"
+          deno-version: "1.17.2"
 
       - name: Setup Go
         uses: actions/setup-go@v2
         with:
-          go-version: "~1.17"
+          go-version: "1.17.6"
 
       - name: Run linter and formatter
         run: make lint-ci
