--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -23,7 +23,7 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v2
         with:
-          go-version: "~1.17"
+          go-version: "1.17.7"
 
       - name: Run linter and formatter
         run: make lint-ci
